--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,22 @@
   url = {https://github.com/rstudio/bookdown},
 }
 
+@Manual{R-caret,
+  title = {caret: Classification and Regression Training},
+  author = {Max Kuhn},
+  year = {2020},
+  note = {R package version 6.0-86},
+  url = {https://github.com/topepo/caret/},
+}
+
+@Manual{R-caTools,
+  title = {caTools: Tools: Moving Window Statistics, GIF, Base64, ROC AUC, etc},
+  author = {Jarek Tuszynski},
+  year = {2021},
+  note = {R package version 1.18.1},
+  url = {https://CRAN.R-project.org/package=caTools},
+}
+
 @Manual{R-DescTools,
   title = {DescTools: Tools for Descriptive Statistics},
   author = {Andri Signorell},
@@ -23,12 +39,61 @@
   url = {https://CRAN.R-project.org/package=DescTools},
 }
 
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.2},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2020},
+  note = {R package version 3.3.2},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-gplots,
+  title = {gplots: Various R Programming Tools for Plotting Data},
+  author = {Gregory R. Warnes and Ben Bolker and Lodewijk Bonebakker and Robert Gentleman and Wolfgang Huber and Andy Liaw and Thomas Lumley and Martin Maechler and Arni Magnusson and Steffen Moeller and Marc Schwartz and Bill Venables},
+  year = {2020},
+  note = {R package version 3.1.1},
+  url = {https://github.com/talgalili/gplots},
+}
+
+@Manual{R-ISwR,
+  title = {ISwR: Introductory Statistics with R},
+  author = {Peter Dalgaard},
+  year = {2020},
+  note = {R package version 2.0-8},
+  url = {https://CRAN.R-project.org/package=ISwR},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
   note = {R package version 1.31},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-lattice,
+  title = {lattice: Trellis Graphics for R},
+  author = {Deepayan Sarkar},
+  year = {2020},
+  note = {R package version 0.20-41},
+  url = {http://lattice.r-forge.r-project.org/},
+}
+
+@Manual{R-RCurl,
+  title = {RCurl: General Network (HTTP/FTP/...) Client Interface for R},
+  author = {Duncan {Temple Lang}},
+  year = {2020},
+  note = {R package version 1.98-1.2},
+  url = {https://CRAN.R-project.org/package=RCurl},
 }
 
 @Manual{R-rmarkdown,
@@ -47,6 +112,15 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://github.com/rstudio/bookdown},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Book{knitr2015,
@@ -69,6 +143,16 @@
   year = {2014},
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Book{lattice2008,
+  title = {Lattice: Multivariate Data Visualization with R},
+  author = {Deepayan Sarkar},
+  publisher = {Springer},
+  address = {New York},
+  year = {2008},
+  note = {ISBN 978-0-387-75968-5},
+  url = {http://lmdvr.r-forge.r-project.org},
 }
 
 @Book{rmarkdown2018,
